--- a/app/httpserver/server/BUILD.bazel
+++ b/app/httpserver/server/BUILD.bazel
@@ -2,7 +2,7 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library")
 
 go_library(
     name = "go_default_library",
-    srcs = ["server.go"],
+    srcs = ["handlers.go"],
     importpath = "github.com/wanghran/learning_golang/app/httpserver/server",
     visibility = ["//app/httpserver:__pkg__"],
 )
