--- a/app/grpcserver/BUILD.bazel
+++ b/app/grpcserver/BUILD.bazel
@@ -2,8 +2,8 @@ load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
 
 go_library(
     name = "go_default_library",
-    srcs = ["client.go"],
-    importpath = "github.com/wanghran/learning_golang/app/grpcclient",
+    srcs = ["server.go"],
+    importpath = "github.com/wanghran/learning_golang/app/grpcserver",
     visibility = ["//visibility:private"],
     deps = [
         "@org_golang_google_grpc//:go_default_library",
@@ -12,7 +12,7 @@ go_library(
 )
 
 go_binary(
-    name = "grpcclient",
+    name = "grpcserver",
     embed = [":go_default_library"],
     visibility = ["//visibility:public"],
 )
